--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
         <section class="hero" id="model">
             <div class="hero-content">
                 <div class="section-label">Catalytic Capital Model</div>
-                <h1>Research creates products. Products fund research. The loop closes.</h1>
+                <h1>A self-sustaining engine for mission-driven innovation.</h1>
                 <p class="hero-description">A new model for innovation that separates discovery (funded by grants) from scaling (funded by investors), with a 2% equity return that makes the nonprofit self-sustaining over time.</p>
             </div>
             <div class="stats-box">
